@@ -1,3 +1,6 @@
+2007-11-14 yusei
+* Fix tab style on konqueror
+
 2007-11-08 kazuhiko
 * Enlarge link area to whole tab
 
